# SneekSave

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: __init__.py  config.py
backend/app/routes/: download.py  health.py  info.py
backend/app/services/: downloader.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.jsx
