[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-dotenv>=0.1.2",
    "flask-restx>=1.3.2",
    "flask-sqlalchemy>=3.1.1",
    "yt-dlp>=2026.2.4",
]
